loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:7: error: not found: value SortieTrouvee
  if(!SortieTrouvee()){
      ^