loopdowhile.Poucet1.scala.code
var nbBag = 0
var sortie = false



while (!sortie){
  if(!SortieTrouvee()){
     //boucle prendre un couloir
    for (couloir <- 1 to 5 ){
       avance()
       if (estSurBiscuit()){
         nbBag = nbBag +1
       } else {
       }
      
     if(nbBag >= 3){ 
       gauche()
     } else {
       droite()
     } // condition sur le cote duquel il faut tourner
     nbBag = 0
    } // fin for
    
    
  } else{ 
    sortie = true
    // pas oublier de faire sortir
  }   
    
} 